# tinystr

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-test.yml
benches/: bench_iai.rs  binarysearch.rs  construct.rs  match.rs  tinystr.rs
examples/: main.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
macros/tests/: macros.rs
raw/: Cargo.toml
raw/src/: error.rs  helpers.rs  lib.rs
src/: helpers.rs  lib.rs  macros.rs  tinystr16.rs  tinystr4.rs  tinystr8.rs  tinystrauto.rs  ule.rs
tests/: main.rs  serde.rs
