[package]
name = "tinystr"
description = """
A small ASCII-only bounded length string representation.
"""
version = "0.4.3"
authors = [
    "Raph Levien <raph.levien@gmail.com>",
    "Zibi Braniecki <zibi@braniecki.net>",
    "Shane F. Carr <shane@sffc.xyz>",
    "Manish Goregaokar <manishsmail@gmail.com>"
]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/zbraniecki/tinystr"
readme = "README.md"
keywords = ["string", "str", "small", "tiny", "no_std"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0.123", optional = true }
tinystr-macros = { version = "0.2", path = "./macros" }
tinystr-raw = { version = "0.1.1", path = "./raw" }

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0.59"
bincode = "1.3"

[features]
default = [ "std" ] # Default to using the std

# Use the standard library. Enables TinyStrAuto.
std = [ "tinystr-raw/std" ]

# Use the `alloc` crate. Enables TinyStrAuto. This feature does nothing if std is enabled.
alloc = []

[[bench]]
name = "construct"
harness = false
required-features = ["std"]

[[bench]]
name = "tinystr"
harness = false

[[bench]]
name = "match"
harness = false

[[test]]
name = "serde"
required-features = ["serde"]
