[package]
name = "tinystr"
description = """
A small ASCII-only bounded length string representation.
"""
version = "0.4.11"
authors = [
    "Raph Levien <raph.levien@gmail.com>",
    "Zibi Braniecki <zibi@braniecki.net>",
    "Shane F. Carr <shane@sffc.xyz>",
    "Manish Goregaokar <manishsmail@gmail.com>"
]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/zbraniecki/tinystr"
readme = "README.md"
keywords = ["string", "str", "small", "tiny", "no_std"]
categories = ["data-structures"]
# needed to avoid dev-dependency features unifying
resolver = "2"

[dependencies]
serde = { version = "1.0.123", optional = true, default-features = false, features = ["alloc"] }
tinystr-macros = { version = "0.2", path = "./macros" }
tinystr-raw = { version = "0.1.3", path = "./raw" }
zerovec = {version = "0.4.0", optional = true }

[dev-dependencies]
criterion = "0.3"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
bincode = "1.3"
iai = "0.1"
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"

[features]
default = [ "std" ] # Default to using the std

# Use the standard library. Enables TinyStrAuto.
std = ["tinystr-raw/std"]

# Use the `alloc` crate. Enables TinyStrAuto. This feature does nothing if std is enabled.
alloc = []

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "construct"
harness = false
required-features = ["std"]

[[bench]]
name = "tinystr"
harness = false

[[bench]]
name = "match"
harness = false

[[bench]]
name = "binarysearch"
harness = false
required-features = ["std"]

[[bench]]
name = "bench_iai"
harness = false
required-features = ["std"]

[[test]]
name = "serde"
required-features = ["serde"]
