[package]
name = "tinystr-raw"
description = """
Raw string-to-integer conversions for tinystr.
"""
version = "0.1.0"
authors = ["Zibi Braniecki <zibi@braniecki.net>", "Shane F. Carr <shane@sffc.xyz>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/zbraniecki/tinystr"
keywords = ["string", "str", "small", "tiny", "no_std"]
categories = ["data-structures"]

[features]
default = [ "std" ] # Default to using the std

# Use the standard library.
std = []
